--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,32 @@
+.textarea {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.main-page {
+  width: calc(100% - 100px);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body, html {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
 
 /*# sourceMappingURL=main.css.map */
