feat: make 1 version of keyboard

--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,24 @@
+.keyboard {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.firstStroke,
+.secondStroke,
+.thirdStroke,
+.fourthStroke,
+.fifthStroke {
+  display: flex;
+  justify-content: space-between;
+  width: 1000px;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .textarea {
   display: flex;
   flex-direction: column;
