--- a/scss/layout/_keyboard.scss
+++ b/scss/layout/_keyboard.scss
@@ -1,6 +1,7 @@
 .keyboard{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    border: 2px solid black;
 }
 
 .firstStroke,
@@ -9,12 +10,55 @@
 .fourthStroke,
 .fifthStroke {
     display: flex;
+    gap: 8px;
+    width: 960px;
+    margin: 4px 4px;
     justify-content: space-between;
-    width: 1000px;
 }
 
 .button{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: gray;
+    border-radius: 6px;
+    border: black 1px solid;
+}
+
+.firstStroke .button:nth-child(14){
+    flex-basis: 15%;
+}
+
+.secondStroke .button:nth-child(1){
+    flex-basis: 10%;
+}
+
+.secondStroke .button:nth-child(15){
+    flex-basis: 7%;
+}
+
+.thirdStroke .button:nth-child(1){
+    flex-basis: 12%;
+}
+
+.thirdStroke .button:nth-child(13){
+    flex-basis: 16%;
+}
+
+.fourthStroke .button:nth-child(1){
+    flex-basis: 14%;
+}
+
+.fourthStroke .button:nth-child(13){
+    flex-basis: 18%;
+}
+
+.fifthStroke .button:nth-child(1),
+.fifthStroke .button:nth-child(2),
+.fifthStroke .button:nth-child(3) {
+    flex-basis: 6%;
+}
+
+.fifthStroke .button:nth-child(4){
+    flex-basis: 47%;
 }
