feat: make setStatus function and setLanguage function

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,9 @@
-.hidden{
+.hidden {
     display: none;
+}
+
+.button {
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    font-size: 20px;
 }
