--- a/scss/layout/_keyboard.scss
+++ b/scss/layout/_keyboard.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     border: 2px solid black;
+    margin-top: 4px;
 }
 
 .firstStroke,
@@ -12,7 +13,7 @@
     display: flex;
     gap: 8px;
     width: 960px;
-    margin: 4px 4px;
+    padding: 4px 4px;
     justify-content: space-between;
 }
 
