--- a/scss/layout/_keyboard.scss
+++ b/scss/layout/_keyboard.scss
@@ -1,4 +1,4 @@
-.keyboard{
+.keyboard {
     display: flex;
     flex-direction: column;
     border: 2px solid black;
@@ -17,40 +17,53 @@
     justify-content: space-between;
 }
 
-.button{
+.button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: gray;
     border-radius: 6px;
     border: black 1px solid;
+    transition: 1s;
 }
 
-.firstStroke .button:nth-child(14){
+.button:not(.active) {
+    background-color: gray;
+}
+
+.button > .lang:has(:not(.hidden)) {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.firstStroke .button:nth-child(14) {
     flex-basis: 15%;
 }
 
-.secondStroke .button:nth-child(1){
+.secondStroke .button:nth-child(1) {
     flex-basis: 10%;
 }
 
-.secondStroke .button:nth-child(15){
+.secondStroke .button:nth-child(15) {
     flex-basis: 7%;
 }
 
-.thirdStroke .button:nth-child(1){
+.thirdStroke .button:nth-child(1) {
     flex-basis: 12%;
 }
 
-.thirdStroke .button:nth-child(13){
+.thirdStroke .button:nth-child(13) {
     flex-basis: 16%;
 }
 
-.fourthStroke .button:nth-child(1){
+.fourthStroke .button:nth-child(1) {
     flex-basis: 14%;
 }
 
-.fourthStroke .button:nth-child(13){
+.fourthStroke .button:nth-child(13) {
     flex-basis: 18%;
 }
 
@@ -60,6 +73,6 @@
     flex-basis: 6%;
 }
 
-.fifthStroke .button:nth-child(4){
+.fifthStroke .button:nth-child(4) {
     flex-basis: 47%;
 }
